--- a/css/about.css
+++ b/css/about.css
@@ -1,8 +1,135 @@
 #about-page {
   height: 100vh;
-  background: rgb(255, 0, 0, 0.1);
+  /* background: rgba(207, 76, 76, 0.1); */
   backdrop-filter: blur(6px);
   left: 100%;
   transition: all 0.5s ease;
 }
+#about_info_main {
+  height: 88vh;
+  /* background: rebeccapurple; */
+  top: 50%;
+  transform: translate(0%, -50%);
+}
+#about_info_main > div {
+  /* border: 1px solid rgb(38, 0, 255); */
+}
+#about_info_main > div > div {
+  /* border: 1px solid rgb(0, 255, 13); */
+}
+#about-info-first-col div:nth-child(1) {
+  width: 14rem;
+  height: 14rem;
+  border-radius: 100%;
+  /* border: 2px solid rgb(255, 255, 255); */
+  background: url("../asserts/pp.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+#about-info-first-col div:nth-child(2) {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  font-family: "Bungee Hairline";
+  width: 100%;
+  height: 20rem;
+  /* border: 1px solid rgb(255, 255, 255); */
+}
+#about-info-first-col div:nth-child(2) h2 {
+  margin-top: 0.2rem;
+  text-align: center;
+}
+#about-info-first-col div:nth-child(2) p {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  font-size: 1.1em;
+  font-weight: 500;
+  /* border: 2px solid rgb(255, 255, 255); */
+  padding-left: 6rem;
+  padding-right: 6rem;
+  font-family: "Lato";
+  text-align: start;
+}
+#about-info-first-col div:nth-child(2) div {
+  width: 100%;
+  height: 6.5rem;
+  /* border: 1px solid rgb(255, 255, 255); */
+  display: flex;
+  flex-direction: column;
+  /* background: goldenrod; */
+}
+#about-info-first-col div:nth-child(2) div > h5 {
+  color: white;
+  font-weight: 900;
+  font-size: 1em;
+  background: rgb(52, 152, 219, 0.2);
+  text-align: center;
+}
+#about-info-first-col div:nth-child(2) div > div {
+  width: 100%;
+  /* background: hsl(0, 100%, 50%, 0.5); */
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  font-size: 2rem;
+  text-align: center;
+}
+#about-info-first-col div:nth-child(2) div > div > i > h6 {
+  font-family: "Bungee Hairline";
+  font-weight: 900;
+}
+/* ////////////////////////////////////////////// */
 
+#about-info-second-col > div {
+  width: 100%;
+  height: 80%;
+  /* border: 1px solid red; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#about-info-second-col > div > i {
+  font-size: 2em;
+  /* background: blue; */
+  width: 80%;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  margin-top: 0.6em;
+  margin-bottom: 0.6em;
+}
+#about-info-second-col > div > i > h5 {
+  font-family: "Lato";
+  margin: 0;
+  margin-left: 2em;
+}
+#about-info-second-col > div > div {
+  /* background: red; */
+  width: 80%;
+  height: 5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 2em;
+}
+#about-info-second-col > div > div > a {
+  text-decoration: none;
+  color: white;
+}
+#about-info-second-col > div > div > a i {
+  color: rgb(255, 255, 255);
+  width: 1.2em;
+  height: 1.2em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.4s;
+}
+
+#about-info-second-col > div > div > a:hover i {
+  color: white;
+  transform: scale(1.1);
+}
