--- a/css/main.css
+++ b/css/main.css
@@ -195,6 +195,8 @@ iframe {
   font-family: "Bungee Hairline";
   font-weight: bold;
   text-align: end;
+  margin-left: 16px;
+  margin-right: 16px;
 }
 /* ////////////////////////////////Nav Hover///////////////////////// */
 .main-nav i > h2 {
