--- a/css/about.css
+++ b/css/about.css
@@ -5,28 +5,37 @@
   left: 100%;
   transition: all 0.5s ease;
 }
+
 #about_info_main {
   height: 88vh;
   /* background: rebeccapurple; */
   top: 50%;
   transform: translate(0%, -50%);
 }
-#about_info_main > div {
+
+#about_info_main>div {
   /* border: 1px solid rgb(38, 0, 255); */
 }
-#about_info_main > div > div {
+
+#about_info_main>div>div {
   /* border: 1px solid rgb(0, 255, 13); */
 }
+
+#about-info-first-col div {
+  transition: all 0.4s ease;
+}
+
 #about-info-first-col div:nth-child(1) {
   width: 14rem;
   height: 14rem;
   border-radius: 100%;
-  /* border: 2px solid rgb(255, 255, 255); */
+  border: 2px solid rgb(255, 255, 255);
   background: url("../asserts/pp.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
+
 #about-info-first-col div:nth-child(2) {
   display: flex;
   align-items: center;
@@ -36,10 +45,12 @@
   height: 20rem;
   /* border: 1px solid rgb(255, 255, 255); */
 }
+
 #about-info-first-col div:nth-child(2) h2 {
   margin-top: 0.2rem;
   text-align: center;
 }
+
 #about-info-first-col div:nth-child(2) p {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
@@ -51,6 +62,7 @@
   font-family: "Lato";
   text-align: start;
 }
+
 #about-info-first-col div:nth-child(2) div {
   width: 100%;
   height: 6.5rem;
@@ -59,14 +71,16 @@
   flex-direction: column;
   /* background: goldenrod; */
 }
-#about-info-first-col div:nth-child(2) div > h5 {
+
+#about-info-first-col div:nth-child(2) div>h5 {
   color: white;
   font-weight: 900;
   font-size: 1em;
   background: rgb(52, 152, 219, 0.2);
   text-align: center;
 }
-#about-info-first-col div:nth-child(2) div > div {
+
+#about-info-first-col div:nth-child(2) div>div {
   width: 100%;
   /* background: hsl(0, 100%, 50%, 0.5); */
   display: flex;
@@ -76,13 +90,14 @@
   font-size: 2rem;
   text-align: center;
 }
-#about-info-first-col div:nth-child(2) div > div > i > h6 {
+
+#about-info-first-col div:nth-child(2) div>div>i>h6 {
   font-family: "Bungee Hairline";
   font-weight: 900;
 }
-/* ////////////////////////////////////////////// */
 
-#about-info-second-col > div {
+/* ////////////////////////////////////////////// */
+#about-info-second-col>div {
   width: 100%;
   height: 80%;
   /* border: 1px solid red; */
@@ -91,7 +106,8 @@
   justify-content: center;
   align-items: center;
 }
-#about-info-second-col > div > i {
+
+#about-info-second-col>div>i {
   font-size: 2em;
   /* background: blue; */
   width: 80%;
@@ -101,13 +117,14 @@
   margin-top: 0.6em;
   margin-bottom: 0.6em;
 }
-#about-info-second-col > div > i > h5 {
+
+#about-info-second-col>div>i>h5 {
   font-family: "Lato";
   margin: 0;
   margin-left: 2em;
 }
-#about-info-second-col > div > div {
-  /* background: red; */
+
+#about-info-second-col>div>div {
   width: 80%;
   height: 5rem;
   display: flex;
@@ -115,11 +132,14 @@
   align-items: center;
   font-size: 2em;
 }
-#about-info-second-col > div > div > a {
+
+#about-info-second-col>div>div>a {
   text-decoration: none;
   color: white;
+  padding: 5px;
 }
-#about-info-second-col > div > div > a i {
+
+#about-info-second-col>div>div>a i {
   color: rgb(255, 255, 255);
   width: 1.2em;
   height: 1.2em;
@@ -129,7 +149,34 @@
   transition: all 0.4s;
 }
 
-#about-info-second-col > div > div > a:hover i {
-  color: white;
+#about-info-second-col>div>div>a:hover i {
+  color: rgb(255, 255, 255);
   transform: scale(1.1);
+}
+
+#about-info-second-col>div>div>a:hover {
+  display: block;
+  border-radius: 100%;
+  /* background: hsl(243, 80%, 62%); */
+  cursor: pointer;
+  box-shadow: 0 0 0 rgba(255, 255, 255, 0.39);
+  animation: pulseAnim 2s infinite;
+}
+
+@keyframes pulseAnim {
+  0% {
+    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.308);
+  }
+
+  70% {
+    box-shadow: 0 0 0 10px rgba(88, 120, 243, 0);
+  }
+
+  100% {
+    box-shadow: 0 0 0 0 rgba(88, 120, 243, 0);
+  }
+}
+
+#about-info-swip {
+  display: none;
 }
