--- a/css/media.css
+++ b/css/media.css
@@ -1,8 +1,9 @@
-@media only screen and (max-width: 480px) {
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
   #hamburge {
     display: block;
     z-index: 1000;
   }
+
   .main-nav {
     /* background: rgb(255, 255, 255, 0.2); */
     display: flex;
@@ -15,29 +16,131 @@
     width: 100%;
     transition: all 0.6s;
   }
-  .main-nav:hover > i {
+
+  .main-nav:hover>i {
     margin: 20px;
   }
-  .main-page-content > h1 {
+
+  .main-page-content>h1 {
     width: 100vw;
     font-size: 36px;
-    text-align: center;
+    text-align: center !important;
   }
+
   .main-page-content h2 {
     text-align: center;
   }
-  .main-nav i > h2 {
+
+  .main-nav i>h2 {
     left: 0;
     opacity: 1;
   }
-  .main-nav:hover i > h2 {
+
+  .main-nav:hover i>h2 {
     left: 0;
   }
+
   #about-title,
   #service-title,
   #skills-title,
   #assignment-title,
   #contact-title {
     text-align-last: justify;
+    /* position: relative;
+    left: 60px;
+    top: 40px; */
+  }
+
+  /* ///ABOUT///// */
+  #about-info-first-col {
+    justify-content: start !important;
+    /* background: rgba(255, 0, 0, 0.425); */
+  }
+
+  #my-info {
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+    text-align: center !important;
+    /* margin: 0 !important; */
+    /* background: red; */
+  }
+
+  #about-info-first-col div:nth-child(1) {
+    width: 10rem !important;
+    height: 10rem !important;
+    /* position: relative; */
+    /* left: -80px; */
+  }
+
+  #about-info-first-col div:nth-child(2) h2 {
+    margin-top: 14px !important;
+  }
+
+  #about-info-first-col div:nth-child(2) p {
+    /* position: relative; */
+    /* top: -50px; */
+  }
+
+  #about-info-first-col div:nth-child(2) div>div {
+    font-size: 1.6rem !important;
+  }
+
+  #about-info-first-col div:nth-child(2) div>div>i>h6 {
+    display: none;
+  }
+
+  /* ////////////////////////////////// */
+  #about-info-swip {
+    position: relative;
+    display: block !important;
+    background: transparent;
+    /* border: 2px solid white; */
+    border: none;
+    box-shadow: none;
+    color: white;
+    width: 60px;
+    font-size: 26px;
+    padding: 0 !important;
+    top: 100px;
+    transition: all 0.6s ease;
+  }
+
+  #about-info-swip i {
+    transition: all 0.6s ease;
+  }
+
+  #about-info-swip {
+    animation: bounce 2s infinite;
+  }
+
+  @keyframes bounce {
+
+    0%,
+    20%,
+    50%,
+    80%,
+    100% {
+      transform: translateY(0);
+    }
+
+    40% {
+      transform: translateY(-5px);
+    }
+
+    60% {
+      transform: translateY(-5px);
+    }
+  }
+
+  /* //////////////////////////////// */
+  #about-info-second-col {
+    /* background: red; */
+    position: relative;
+    top: 138px;
+    transition: all 0.6s ease;
+  }
+
+  #about-info-second-col>div>div {
+    margin-top: 16px;
   }
 }
